--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -23,16 +23,10 @@
                             {% else %}
                             <a href="{% url 'login' %}">{% trans 'Log in' %}</a>
                             {% endif %}                            
-                            <a href="{% url 'register' %}">{% trans 'Sign up' %}</a>
-                            <a href="#">{% trans 'FAQs' %}</a>
+                            <a href="{% url 'register' %}">{% trans 'Sign up' %}</a>                            
                           </div>
                           <div class="header__top__hover">
-                              <span>Usd <i class="arrow_carrot-down"></i></span>
-                              <ul>
-                                  <li>USD</li>
-                                  <li>EUR</li>
-                                  <li>USD</li>
-                              </ul>
+                              
                           </div>
                       </div>
                   </div>
@@ -55,8 +49,8 @@
                               <ul class="dropdown">
                                   <li><a href="{% url 'about_us' %}">{% trans 'About Us' %}</a></li>
                                  
-                                  <li><a href="{% url 'shopping_cart' %}">{% trans 'Shopping Cart' %}</a></li>
-                                  <li><a href="{% url 'checkout' %}">{% trans 'Check Out' %}</a></li>
+                                  {% comment %} <li><a href="{% url 'shopping_cart' %}">{% trans 'Shopping Cart' %}</a></li> {% endcomment %}
+                                  {% comment %} <li><a href="{% url 'checkout' %}">{% trans 'Check Out' %}</a></li> {% endcomment %}
                                   
                               </ul>
                           </li>
