--- a/core/templates/shop-details.html
+++ b/core/templates/shop-details.html
@@ -25,25 +25,31 @@
                                     </div>
                                 </a>
                             </li>
+                            {% if product.image_2 %}
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">
-                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image.url }}">
+                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image_2.url }}">
                                     </div>
                                 </a>
                             </li>
+                            {% endif %}
+                            {% if product.image_3 %}
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab">
-                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image.url }}">
+                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image_3.url }}">
                                     </div>
                                 </a>
                             </li>
+                            {% endif %}
+                            {% if product.image_4 %}
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tabs-4" role="tab">
-                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image.url }}">
+                                    <div class="product__thumb__pic set-bg" data-setbg="{{ product.image_4.url }}">
                                         <i class="fa fa-play"></i>
                                     </div>
                                 </a>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-9">
@@ -53,25 +59,32 @@
                                     <img src="{{ product.image.url }}" alt="">
                                 </div>
                             </div>
+                            {% if product.image_2 %}
                             <div class="tab-pane" id="tabs-2" role="tabpanel">
                                 <div class="product__details__pic__item">
-                                    <img src="{{ product.image.url }}" alt="">
+                                    <img src="{{ product.image_2.url }}" alt="">
                                 </div>
                             </div>
+                            {% endif %}
+                            {% if product.image_3 %}
                             <div class="tab-pane" id="tabs-3" role="tabpanel">
                                 <div class="product__details__pic__item">
-                                    <img src="{{ product.image.url }}" alt="">
+                                    <img src="{{ product.image_3.url }}" alt="">
                                 </div>
                             </div>
+                            {% endif %}
+                            {% if product.image_4 %}
                             <div class="tab-pane" id="tabs-4" role="tabpanel">
                                 <div class="product__details__pic__item">
-                                    <img src="img/shop-details/product-big-4.png" alt="">
+                                    <img src="{{ product.image_4.url }}" alt="">
                                     <a href="https://www.youtube.com/watch?v=8PJ3_p7VqHw&list=RD8PJ3_p7VqHw&start_radio=1" class="video-popup"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
         <div class="product__details__content">
@@ -130,18 +143,18 @@
                                 <a href="#"><i class="fa fa-exchange"></i> Add To Compare</a>
                             </div>
                             <div class="product__details__last__option">
-                                <h5><span>Guaranteed Safe Checkout</span></h5>
+                                {% comment %} <h5><span>Guaranteed Safe Checkout</span></h5> {% endcomment %}
                                 <img src="img/shop-details/details-payment.png" alt="">
                                 <ul>
-                                    <li><span>SKU:</span> 3812912</li>
-                                    <li><span>Categories:</span> Clothes</li>
-                                    <li><span>Tag:</span> Clothes, Skin, Body</li>
+                                   
+                                    <li><span>Brands:</span> {{ product.brands }}</li>
+                                    <li><span>Tag:</span>{{ product.tags }}</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                {% comment %} <div class="row">
                     <div class="col-lg-12">
                         <div class="product__details__tab">
                             <ul class="nav nav-tabs" role="tablist">
@@ -260,12 +273,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </section>
+    <br>
+    <br>
     <!-- Shop Details Section End -->
-
+{% comment %} 
     <!-- Related Section Begin -->
     <section class="related spad">
         <div class="container">
@@ -416,85 +431,9 @@
             </div>
         </div>
     </section>
-    <!-- Related Section End -->
-
-    <!-- Footer Section Begin -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer__about">
-                        <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
-                        </div>
-                        <p>The customer is at the heart of our unique business model, which includes design.</p>
-                        <a href="#"><img src="img/payment.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Shopping</h6>
-                        <ul>
-                            <li><a href="#">Clothing Store</a></li>
-                            <li><a href="#">Trending Shoes</a></li>
-                            <li><a href="#">Accessories</a></li>
-                            <li><a href="#">Sale</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Shopping</h6>
-                        <ul>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Payment Methods</a></li>
-                            <li><a href="#">Delivary</a></li>
-                            <li><a href="#">Return & Exchanges</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>NewLetter</h6>
-                        <div class="footer__newslatter">
-                            <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                            <form action="#">
-                                <input type="text" placeholder="Your email">
-                                <button type="submit"><span class="icon_mail_alt"></span></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="footer__copyright__text">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <p>Copyright ©
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>2020
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        </p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Related Section End --> {% endcomment %}
     <!-- Footer Section End -->
 
-    <!-- Search Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
-    <!-- Search End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
