--- a/core/templates/shop.html
+++ b/core/templates/shop.html
@@ -99,10 +99,7 @@
                                     </div>
                                     <div id="collapseFour" class="collapse show" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            <div class="shop__sidebar__size">
-                                                <label for="xs">M
-                                                    <input type="radio" id="xs">
-                                                </label>
+                                            <div class="shop__sidebar__size">                                                
                                                 {% for size in size %}
                                                 <label for="xs" ><a href="{% url 'shop' %}?size={{ size.title }}">{{ size.title }}</a>
                                                     <input type="radio" id="xs">
@@ -204,8 +201,9 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="shop__product__option__left">
-                                    <p>Showing 1–12 of 126 results</p>
+                                    <p>Showing 1–{{ product_count }} of {{ product_count }} results</p>
                                 </div>
+                                
                             </div>
                             {% comment %} <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="shop__product__option__right">
@@ -224,9 +222,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="{{ product.image.url }}">
-                                    <ul class="product__hover">
-                                        <li><a href="#"><img src="{% static 'img/icon/heart.png' %}" alt=""></a></li>
-                                        <li><a href="#"><img src="{% static 'img/icon/compare.png' %}" alt=""> <span>Compare</span></a></li>
+                                    <ul class="product__hover">                                        
                                         <li><a href="{% url 'shop_detail' slug=product.slug %}"><img src="{% static 'img/icon/search.png' %}" alt=""></a></li>
                                     </ul>
                                 </div>
